--- a/index.html
+++ b/index.html
@@ -5,25 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Who's that Pokemon!?!</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
     <link href="./style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
+    <div class="heading">
+        <h1 style="size: 62px;"><b>Know your Pokemon!</b></h1>
+    </div>
+
+    <div class="userBox">
+        <form>
+            <label for="search"></label>
+            <input id="pokeName" type="text" placeholder="Enter Pokemon Name">
+            <button type="button" class="btn btn-outline-warning">Search 'Mon</button>
+        </form>
+    </div> 
+
     <div class="wrapper">
-        <div class="heading">
-            <h1><b>What's That Pokemon ('s)</b></h1>
-            <h2><b>Height?</b></h2>
+         <div class="id">
+             <h2>Id #</h2>
+             <p style="font-size: 62px;" id="id"></p>
         </div>
-            <div class="container">
-                <p id="height"></p>
-            </div>
-            <div class="userBox">
-                <form>
-                    <label for="search"></label>
-                    <input id="pokeName" type="text" placeholder="Enter Pokemon Name">
-                    <button id="search">Search</button>
-                </form>
-            </div> 
-     </div>
+
+        <div class="weight">
+            <h2>Weight</h2>
+             <p style="font-size: 62px;" id="weight"></p>
+        </div>
+
+        <div class="height">
+             <h2>Height</h2>
+             <p style="font-size: 62px;" id="height"></p>
+        </div>
+    </div>
 
 
     <script src="./script2.js"></script>
