--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <form>
             <label for="search"></label>
             <input id="pokeName" type="text" placeholder="Enter Pokemon Name">
-            <button type="button" class="btn btn-outline-warning">Search 'Mon</button>
+            <button type="submit" class="btn btn-outline-warning">Search 'Mon</button>
         </form>
     </div> 
 
